# py-omni-weekly

./: README.md  requirements.txt  setup.cfg
omniweekly/: cmd.py  template.jinja
omniweekly/filters/: __init__.py  foramt.py  task.py
tests/db/: elder
