[metadata]
name = py-omni-weekly
author = James Pan
author-email = panjiabang@gmail.com
summary = Weekly Generator for OmniFocus
description-file = README.md
home-page = https://github.com/JamesPan/py-omni-weekly
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    weekly
    omnifocus
[files]
packages =
    omniweekly
[entry_points]
console_scripts =
    weekly = omniweekly.cmd:main
